--- a/Bot/package.json
+++ b/Bot/package.json
@@ -1,14 +1,32 @@
 {
   "name": "miggzy-tg-bot",
   "version": "1.0.0",
+  "description": "Miggzy Telegram Bot for Base chain automation and community games",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "telegraf": "^4.15.0",
-    "ethers": "^6.8.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  }
+    "telegraf": "^4.15.3",
+    "dotenv": "^16.3.1",
+    "lowdb": "^7.0.1",
+    "node-fetch": "^3.3.2",
+    "axios": "^1.7.2",
+    "fs-extra": "^11.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "telegram",
+    "bot",
+    "miggzy",
+    "base-chain",
+    "bnb",
+    "raffle",
+    "casino"
+  ],
+  "author": "King Petty",
+  "license": "MIT"
 }
