--- a/Bot/package.json
+++ b/Bot/package.json
@@ -9,13 +9,10 @@
   "engines": {
     "node": ">=20 <26"
   },
-  "dependencies": {
-    "telegraf": "^4.16.3",
-    "dotenv": "^16.4.5",
-    "lowdb": "^7.0.1",
-    "ethers": "^6.13.2"
-    "dayjs": "^1.11.11" 
-  }
-  
+"dependencies": {
+  "telegraf": "^4.16.3",
+  "dotenv": "^16.4.5",
+  "lowdb": "^7.0.1",
+  "ethers": "^6.13.2",
+  "dayjs": "^1.11.11"
 }
-
