--- a/Bot/package.json
+++ b/Bot/package.json
@@ -10,10 +10,11 @@
     "node": ">=20 <26"
   },
   "dependencies": {
-    "telegraf": "^4.16.3",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
-    "lowdb": "^7.0.1",
     "ethers": "^6.13.2",
-    "dayjs": "^1.11.11"
+    "lowdb": "^7.0.1",
+    "nanoid": "^5.1.6",
+    "telegraf": "^4.16.3"
   }
 }
