--- a/Bot/package.json
+++ b/Bot/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "miggzy-tg-bot",
+  "name": "miggzy-bot",
   "version": "1.0.0",
   "type": "module",
-  "main": "Bot/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node Bot/index.js"
-  },
-  "engines": {
-    "node": ">=20 <26"
+    "start": "node index.js"
   },
   "dependencies": {
+    "telegraf": "^4.16.3",
+    "ethers": "5.7.2",
+    "lowdb": "^6.1.1",
     "dayjs": "^1.11.11",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
-    "lowdb": "^7.0.1",
-    "nanoid": "^5.1.6",
-    "telegraf": "^4.16.3"
+    "nanoid": "^4.0.2"
   }
 }
