--- a/Bot/package.json
+++ b/Bot/package.json
@@ -11,6 +11,7 @@
     "ethers": "5.7.2",
     "lowdb": "^6.1.1",
     "dayjs": "^1.11.11",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "dotenv": "^16.3.1"
   }
 }
