--- a/Bot/package.json
+++ b/Bot/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
+    "express": "^5.1.0",
     "lowdb": "^7.0.1",
     "nanoid": "^5.1.6",
     "telegraf": "^4.16.3"
